--- a/Home.html
+++ b/Home.html
@@ -71,18 +71,25 @@
     </div>
 
     <div class="topnav">
-      <i
-        class="fa fa-terminal pure-menu-heading"
-        style=" color:white; padding-right:0px;"
-      ></i
-      ><a class="pure-menu-heading" href="Home.html" style="padding-left:2px;"
-        >Martin Morris</a
-      >
+      <div>
+        <i
+          class="fa fa-terminal pure-menu-heading"
+          style=" color:white; padding-right:0px;display:inline;"
+        ></i
+        ><a
+          class="pure-menu-heading"
+          href="Home.html"
+          style="padding-left:2px;display:inline;"
+          >Martin Morris</a
+        >
+      </div>
+
       <!-- Navigation links (hidden by default) -->
 
       <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-bars fa-2x"></i>
       </a>
     </div>
     <div id="myLinks">
