--- a/Knowledge.html
+++ b/Knowledge.html
@@ -169,6 +169,13 @@
         </a>
       </div>
 
+      <form action="email.php" method="POST">
+        <input name="name" type="text" class="feedback-input" placeholder="Name" />
+        <input name="email" type="text" class="feedback-input" placeholder="Email" />
+        <textarea name="text" class="feedback-input" placeholder="Comment"></textarea>
+        <input type="submit" value="SUBMIT" />
+      </form>
+
       <div id="resume-knowledge" class="rInActive">
         <div class="page-container-resume  l-box-lrg pure-g"
           style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
