--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,32 @@
 
       <!-- Tab content -->
       <div id="Websites" class="tabcontent" style="display: block">
+
+        <div class="project-container">
+          <div class="project-description">
+            <h2 style="margin-top: 0;">Holli Dolli</h2>
+            <strong>[HTML/CSS/JS] [UI/UX] [Bootstrap] [Git Deployment] [Web hosting management]</strong>
+
+            <p>
+              This is a website I created for a landscaping business located in Brisbane. The
+              client wanted a simple one page design that was also mobile friendly. I used this
+              oppurtubity to really utilise my bootstrap skills in order to make the site dynamic
+              across all devices.
+            </p>
+          </div>
+          <div class="websiteImages">
+            <a href="https://www.greenstartgardens.com/" target="_blank">
+              <div class="container">
+                <img src="img/websiteScreenshots/Greenstartgardens.JPG" alt="Avatar" class="image" style="width:100%" />
+                <div class="middle">
+                  <div class="text">Visit Site</div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+
+
         <div class="project-container">
           <div class="project-description">
             <h2 style="margin-top: 0;">Intranet</h2>
@@ -136,7 +162,7 @@
         <div class="project-container">
           <div class="project-description">
             <h2 style="margin-top: 0;">Holli Dolli</h2>
-            <strong>[HTML/CSS/JS] [UI/UX] [Shopify] </strong>
+            <strong>[HTML/CSS/JS] [UI/UX] [Shopify] [Web hosting management]</strong>
 
             <p>
               This is a website I created for a small clothing store located
@@ -163,6 +189,7 @@
             </a>
           </div>
         </div>
+
         <div class="project-container">
           <div class="project-description">
             <h2 style="margin-top: 0;">Portfolio Website</h2>
